<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">WxTrax</string>

    <string name="action_settings">Action</string>

    <string name="activity_label_about">About</string>
    <string name="activity_label_map">Map</string>
    <string name="activity_label_prefer">Prefer</string>
    <string name="activity_label_station">Station</string>
    <string name="activity_label_station_edit">Station Edit</string>
    <string name="activity_label_weather">Weather</string>

    <string name="alert_delete_no">No</string>
    <string name="alert_delete_yes">Yes</string>

    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="button_net_test1">Single Station</string>
    <string name="button_net_test2">All Stations</string>

    <string name="dialog_add_station_message">Add New Station</string>
    <string name="dialog_add_station_title">Add New Station</string>
    <string name="dialog_delete_station_message">Are You Sure?</string>
    <string name="dialog_delete_station_title">Delete Station</string>
    <string name="dialog_save_no">Cancel</string>
    <string name="dialog_save_yes">Save</string>

    <string name="error_duplicate_station">Duplicate Station</string>
    <string name="error_unknown_station">Unknown Station</string>

    <string name="label_about_hello">About</string>
    <string name="label_map">Google Map</string>
    <string name="label_default">Default</string>
    <string name="label_dev_hello">Development</string>
    <string name="label_pressure">Pressure</string>
    <string name="label_station">Weather Station</string>
    <string name="label_station_hello">Weather Stations</string>
    <string name="label_station_add_hello">Add New Weather Station</string>
    <string name="label_temperature">Temperature</string>
    <string name="label_timestamp">Time</string>
    <string name="label_no_rows">No Rows</string>
    <string name="label_visibility">Visibility</string>
    <string name="label_weather">Weather</string>
    <string name="label_weather_hello">Collected Weather</string>
    <string name="label_wind">Wind</string>

    <string name="main_menu_add_station">Add Station</string>
    <string name="main_menu_about">About</string>
    <string name="main_menu_preference">Preference</string>
    <string name="main_menu_station">Station</string>
    <string name="main_menu_map">Map</string>

    <string name="menu_application_bar_map">Map</string>
    <string name="menu_application_bar_splash">Splash</string>
    <string name="menu_application_bar_station_list">Stations</string>

    <string name="preference_title01">Network</string>
    <string name="preference_poll">Poll Interval</string>
    <string name="preference_poll_summary">Minutes Between Refresh</string>
    <string name="preference_poll_dialog">Poll Values</string>

    <string name="preference_title02">Audio</string>
    <string name="preference_audio">Enable Audio</string>
    <string name="preference_audio_summary">Check Enable Audio Cue</string>
    <string name="preference_audio_dialog">Audio Cue</string>

    <string name="station_menu_add">Add Station</string>
    <string name="station_menu_delete">Delete Station</string>
    <string name="station_menu_edit">Edit Station</string>
    <string name="station_menu_favorite">Favorite Station</string>

    <string name="toast_new_station_success">New Station Success</string>
</resources>